--- a/package.json
+++ b/package.json
@@ -1,36 +1,42 @@
 {
-  "name": "pdf-app",
+  "name": "open-pro-next",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@chakra-ui/color-mode": "^2.2.0",
-    "@chakra-ui/icons": "^2.2.4",
-    "@chakra-ui/react": "^3.25.0",
-    "@chakra-ui/theme": "^3.4.6",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.8.0",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "framer-motion": "^12.23.12",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^2.2.0",
+    "@types/node": "^22.13.0",
+    "@types/react-dom": "19.0.3",
+    "aos": "3.0.0-beta.6",
+    "axios": "^1.11.0",
+    "babel-plugin-react-css-modules": "^5.2.6",
+    "framer-motion": "^11.2.6",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.22.3",
+    "react-scripts": "^5.0.1",
+    "reactstrap": "^9.2.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/postcss": "^4.1.12",
+    "@types/aos": "^3.0.7",
+    "@types/react": "^19.1.11",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^4.9.5",
+    "webpack": "^5.101.3"
   },
   "browserslist": {
     "production": [
